# AG_CoverMaestro

./: .env.example  .gitignore  .replit  ADR-001-amazon-export-snapshot-guardrails.md  ADR-002-filesystem-sanitization.md  EBAY-Frontman-2025-6.csv  Export_Enhancements_Manifest.md  FIX_DUPLICATES_ADD_NOTES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LEGACY_REMOVAL_COMPLETE.md  MULTI_TEMPLATE_VERIFICATION.md  PROGRESSIVE_DISCLOSURE_COMPLETE.md  Phase2_Proposal.md  Project_Rules copy.md  Project_Rules.md  README.md  REVERB-Template.csv  add_columns.py  bulk_import_csv.py  check_cols.py  check_db.py  check_design_options.py  check_et1.py  check_headers.py  check_material_roles.py  check_messages.py  check_nulls.py  check_status.py  check_table.py  cleanup_messages.py  cols_output.txt  compare_schema.py  db_columns.json  db_verify_output.txt  debug_et.py  debug_model_90.py  debug_model_real_90.py  debug_openapi.py  debug_output.txt  debug_recalc.py  (+65 more)
.agent/: MIXED_EQUIPMENT_TYPE_VALIDATION_IMPLEMENTATION.md  test_mixed_equipment_validation.py
.ai/: DO_NOT_TOUCH.md  agent_rules.md  pricing_audit_checklist.md
alembic/: env.py
app/: config.py  database.py  main.py  seed_data.py
artifacts/: repo_phase_index.md
attached_assets/: CARRIER_BAG_CASE(ALLKEYWORDS)_1766004992859.xlsx  Pasted-Detailed-Development-Structure-Prompts-for-the-Cover-Ma_1766002444242.txt  Pasted-Replit-Implementation-Prompt-Role-Senior-Full-Stack-Dev_1766365066607.txt  Pasted-Role-Senior-Full-Stack-Developer-Task-Implement-Supplie_1766368560177.txt
client/: package-lock.json  package.json  vercel.json  (+1 more)
(+164 files in other folders)
